# loretta

./: .env.example  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
bot/: main.py
bot/cogs/: bios.py  birthday.py  botinfo.py  cog_management.py  command_sync.py  computerbase.py  config.py  cpu_guides.py  error_handler.py  gif.py  hardwareluxx.py  help.py  hwbot.py  leetspeak.py  magic_ball.py  mainboard.py  member_log.py  pcgh.py  picture_only.py  ping.py  purge.py  ram_guides.py  random.py  roll.py  schmutz.py  screenshot.py  serverinfo.py  sgehdn.py  shutdown.py  software_check.py  specifications.py  statistics.py  timings.py  userinfo.py  weather.py  why.py
bot/utils/: decorators.py  rss_feed.py  user_resolver.py
cogs/: bios.py  birthday.py  botinfo.py  cog_management.py  command_sync.py  computerbase.py  config.py  cpu_guides.py  error_handler.py  gif.py  hardwareluxx.py  help.py  hwbot.py  leetspeak.py  magic_ball.py  mainboard.py  member_log.py  pcgh.py  picture_only.py  ping.py  purge.py  ram_guides.py  random.py  roll.py  schmutz.py  screenshot.py  serverinfo.py  sgehdn.py  shutdown.py  software_check.py  specifications.py  statistics.py  timings.py  userinfo.py  weather.py  why.py
database/: __init__.py  init.py  manager.py  models.py
models/: __init__.py  database.py
src/bot/: main.py
src/bot/cogs/: __init__.py
src/database/: db_init.py  manager.py  models.py  schemas.py
utils/: __init__.py  constants.py  database.py  decorators.py  embeds.py  formatting.py  logging.py  pagination.py  responses.py  user_resolver.py
(+49 files in other folders)
