[project]
name = "loretta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "discord-py[speed,voice]>=2.5.2",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "discord-py[speed,voice]>=2.5.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
]
